# slack-mcp

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONFIGURATION_GUIDE.md  Dockerfile  FILE_OPS_FIX_SUMMARY.md  LICENSE  README.md  ROADMAP.md  claude_desktop_config.json  container_test.py  docker-compose.yml  docker-wrapper.sh  docker_direct_config.json  docker_mcp_config.json  main.py  mcp_config_examples.json  pyproject.toml  sample.config  test_file_ops_fix.py  test_phase5.py  test_phase6.py  test_phase7.py  test_tools.py
.github/workflows/: test.yml
src/: slack_mcp_server.py
src/slack_mcp/: README.md  __init__.py
src/slack_mcp/models/: __init__.py  schemas.py
src/slack_mcp/tools/: __init__.py  channel_management.py  core.py  files.py  message_management.py  user_management.py
src/slack_mcp/utils/: __init__.py  client.py  errors.py  formatting.py
tests/: __init__.py  conftest.py  test_channel_management.py  test_core.py  test_integration.py  test_message_management.py  test_user_management.py  test_utils.py
