[project]
name = "slack-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.35.0",
]
