[project]
name = "slack-mcp"
version = "1.1.0"
description = "A comprehensive MCP server for Slack API operations"
readme = "README.md"
authors = [
    {name = "Brennon Church", email = "atarukun@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.35.0",
]
